Bug 397597. Enable native platform linebreaking for Tibetan and Lao. r=masayuki,a=dbaron